--- a/html/bts.html
+++ b/html/bts.html
@@ -14,8 +14,10 @@
     </head>
 
     <body>
+        <!-- bar de navigation -->
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
+            <!-- routes -->
             <ul>
                 <li><a href='../index.html'>Accueil</a></li>
                 <li><a href='../html/profil.html'>Mon profil</a></li>
@@ -25,7 +27,8 @@
                 <li><a href='../html/documentations.html'>Documentations</a></li>
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
-            
+
+            <!-- lien github et linkedin -->
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" crossorigin="anonymous">
                     <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
@@ -65,6 +68,7 @@
             </div>
             <!-- OPTIONS -->
             <div class=" veilleGlass optionSLAM">
+                <!-- SLAM -->
                     <h3 class="d-flex justify-content-center">Option SLAM</h3>
                     <p>
                         L’option SLAM est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance de programmes applicatifs. 
@@ -73,6 +77,7 @@
                     </p>
             </div>
 
+            <!-- SISR -->
             <div class="veilleGlass optionSISR">
                 <h3 class="d-flex justify-content-center">Option SISR</h3>
                     <p>
