--- a/html/profil.html
+++ b/html/profil.html
@@ -26,7 +26,7 @@
                 <li><a href='../html/documentations.html'>Documentations</a></li>
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
-
+            <!-- github et linkedin -->
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" crossorigin="anonymous">
                     <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
@@ -36,6 +36,7 @@
                 </a>
             </div>
         </nav>
+
         <!-- profil -->
         <div class="profil ">
             <div class="veilleGlass adjust">
@@ -50,6 +51,7 @@
                 </p>
                 <a href="https://www.karoil.fr/" target="_blank"></a>
             </div>
+
             <div class="veilleGlass adjust">
                 <h2 class="d-flex justify-content-center">Mon projet professionnel:</h2>
                 <p class="d-flex justify-content-center textPresentation">
@@ -59,6 +61,7 @@
                     Par la suite j'aimerais continuer mes études sur un mastère dev, data et IA.
                 </p>
             </div>
+
             <div class="veilleGlass adjust">
                 <h2 class="d-flex justify-content-center competenceTitre">Mes compétences:</h2>
 
@@ -91,6 +94,7 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- ANGULAR / REACT -->
                     <div class="veryCreative"> 
                         <div class="container">
@@ -119,7 +123,6 @@
                     </div>
                 </div>
             
-
                 <div class="outcastParent">
                     <!-- PYTHON / JS -->
                     <div class="oucastChild"> 
@@ -151,13 +154,14 @@
                 </div>
             </div>
 
+            <!-- affichage CV -->
             <div class="pdfClass">
                 <embed src="../asset/paillet-cv-fev.pdf" type="application/pdf" width="100%" height="100%">
             </div>
-            
         </div>
     </body>
 
+    <!-- footer -->
     <footer class="d-flex justify-content-center prettyFooter">
         <p>© Copyright Laura Paillet. Tous Droits Réservés</p>
     </footer>
