--- a/html/projet.html
+++ b/html/projet.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <!-- bar menu -->
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
@@ -26,6 +27,7 @@
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
 
+            <!-- github et linkedin -->
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" target="_blank" crossorigin="anonymous">
                     <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
@@ -36,6 +38,7 @@
             </div>
         </nav>
         
+        <!-- PROJET SCOLAIRE -->
         <div class="projet">
             <div class="veilleGlass">
                 <h1>Quels sont les projets vu en cours d'année?</h1>
@@ -43,15 +46,18 @@
                 Les AP permettent de mettre en situation les élèves selon des contextes qu'ils pourraient rencontrer dans le monde professionnel.</p>
             </div>
 
+            <!-- Lien Projet -->
             <div class="adjust parent">
+                <!-- Entreprise fictive -->
                 <div class="veilleGlass div1">
                     <div class="d-flex justify-content-center align-items-center flex-column">
                         <h1>Mercedes Deve - Mention legale</h1>
                         <div class="d-flex justify-content-evenly align-items-center w-100">
+                            <!-- lien github -->
                             <a href="https://github.com/L-Paillet/entrepriseFictif" target="_blank" crossorigin="anonymous">
                                 <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                             </a>
-
+                            <!-- lien site en ligne -->
                             <a href="https://l-paillet.github.io/entrepriseFictif/" target="_blank" crossorigin="anonymous">
                                 <img class="gitLogo" src="../asset/web.png" alt="github portfolio-github bts-sio">
                             </a>
@@ -59,39 +65,39 @@
                     </div>
                 </div>
 
+                    <!-- Asso M2L -->
                 <div class="veilleGlass div2">
                     <div class="d-flex justify-content-center align-items-center flex-column">
                         <h1>Association M2L</h1>
                         <div class="d-flex justify-content-evenly align-items-center w-100">
-
+                            <!-- FRONT END -->
                             <div class="d-flex justify-content-center align-items-center flex-column">
                                 <h4>Front end </h4>
                                 <a href="https://github.com/Arthurbsnrd/M2L" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
-
+                            <!-- BACK END -->
                             <div class="d-flex justify-content-center align-items-center flex-column">
                                 <h4>Back end </h4>
                                 <a href="https://github.com/L-Paillet/backM2L" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/github.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
-
+                            <!-- DOCUMENTATION -->
                             <div class="d-flex justify-content-center align-items-center flex-column">
                                 <h4>Documentation</h4>
                                 <a href="https://drive.google.com/drive/folders/1jsCBtpaR2_xN_lKc8R_vDpBxXKmTk8a4?usp=sharing" target="_blank" crossorigin="anonymous">
                                     <img class="gitLogo" src="../asset/Document-icon1.png" alt="github portfolio-github bts-sio">
                                 </a>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </body>
-
+<!-- footer -->
     <footer class="d-flex justify-content-center prettyFooter">
         <p>© Copyright Laura Paillet. Tous Droits Réservés</p>
     </footer>
