--- a/html/tableau.html
+++ b/html/tableau.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <!-- bar menu -->
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
@@ -25,7 +26,7 @@
                 <li><a href='../html/documentations.html'>Documentations</a></li>
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
-
+            <!-- github et linkedin -->
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" crossorigin="anonymous">
                     <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
@@ -36,6 +37,7 @@
             </div>
         </nav>
 
+        <!-- tableau de synthese -->
         <div class="tableau">
             <h1>Tableau de synthèse</h1>
             <div class="pdfClass">
@@ -44,7 +46,7 @@
         </div>
 
     </body>
-    
+    <!-- footer -->
     <footer class="d-flex justify-content-center prettyFooter">
         <p>© Copyright Laura Paillet. Tous Droits Réservés</p>
     </footer>
