--- a/html/veille.html
+++ b/html/veille.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <!-- bar menu -->
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
             <ul>
@@ -25,7 +26,7 @@
                 <li><a href='../html/documentations.html'>Documentations</a></li>
                 <li><a href='../html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
-
+            <!-- github et linkedin -->
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" crossorigin="anonymous">
                     <img src="../asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
@@ -36,8 +37,9 @@
             </div>
         </nav>
 
+        <!-- VEILLE -->
         <div class="veille">
-
+            <!-- text presentation -->
             <div class="veilleGlass">
                 <h1>Qu'est-ce que la veille technologique ?</h1>
                 <p>
@@ -49,6 +51,7 @@
                 </p>
             </div>
 
+            <!-- Flux RSS -->
             <div class="veilleGlass adjust">
                 <h1>Sujets de la veille technologique</h1>
                <p>Pour ma veille j'ai décidé d'approcher les sujets suivants, le framework Angular et le RGPD (Règlement général sur la protection des données). 
@@ -78,6 +81,7 @@
                 </div>
             </div>
 
+            <!-- ANGULAR -->
             <div class="veilleGlass adjust">
                 <h2>Qu'est-ce qu'Angular?</h2>
                 <p>Angular est un framework open source basé sur typescript qui permet de créer des applications web monopage 
@@ -86,6 +90,7 @@
                 </p>
             </div>
 
+            <!-- RGPD -->
             <div class="veilleGlass adjust">
                 <h1>Qu'est-ce que le RGPD?</h1>
                 <p>Le RGPD ou GDPR « General Data Protection Regulation » en anglais, 
@@ -95,14 +100,13 @@
                     d'aujourd'hui où tout le monde est toujours très connecté.
                 </p>
             </div>
-<!-- article sur veille -->
+            <!-- article sur veille -->
             <div>
                 
             </div>
         </div>
     </body>
-
-
+    <!-- footer -->
     <footer class="d-flex justify-content-center prettyFooter">
         <p>© Copyright Laura Paillet. Tous Droits Réservés</p>
     </footer>
