--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     </head>
     
     <body>
+        <!-- bar de navigation -->
         <nav id='menu' class="menuBack menuScroll">
             <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
+            <!-- routes -->
             <ul>
                 <li><a href='index.html'>Accueil</a></li>
                 <li><a href='./html/profil.html'>Mon profil</a></li>
@@ -26,7 +28,7 @@
                 <li><a href='../html/documentations.html'>Documentations</a></li>
                 <li><a href='./html/tableau.html'>Tableau de synthèse</a></li>
             </ul>
-            
+            <!-- lien github et linkedin -->
             <div class="d-flex justify-content-end">
                 <a href="https://github.com/L-Paillet" target="_blank" crossorigin="anonymous">
                     <img src="./asset/github.png" alt="portfolio-github" srcset="" class="logoGit">
@@ -36,7 +38,8 @@
                 </a>
             </div>
         </nav>
-        <!-- git push test -->
+
+        <!-- Bouton lien vers profil et tableau -->
         <div class="container">
             <div class="d-flex justify-content-center align-items-center colContent">
                 <h1>Laura PAILLET</h1>
@@ -48,7 +51,7 @@
             </div>
         </div>
     </body>
-
+    <!-- footer -->
     <footer class="d-flex justify-content-center prettyFooter">
         <p>© Copyright Laura Paillet. Tous Droits Réservés</p>
     </footer>
