--- a/html/bts.html
+++ b/html/bts.html
@@ -39,56 +39,56 @@
             </div>
         </nav>
 
-<!-- grid présentation BTS -->
-    <div class="griddy">
-        <div class="parent">
-            <div class="veilleGlass btsText">
-                    <div class="d-flex justify-content-center textChild">
-                        <h1>
-                            Qu'est-ce que le BTS SIO
-                        </h1>
-                        <p class="ajustementText">
-                            Le BTS Services informatiques aux Organisations (SIO) est un diplôme reconnu par l’état de niveau Bac+2.
-                            Il comporte deux option permettant de se spécialiser, les deux comportants des notions de cybersécurité: 
+        <!-- grid présentation BTS -->
+        <div class="griddys">
+            <div class="parent">
+                <div class="veilleGlass btsText">
+                        <div class="d-flex justify-content-center textChild">
+                            <h1>
+                                Qu'est-ce que le BTS SIO
+                            </h1>
+                            <p class="ajustementText">
+                                Le BTS Services informatiques aux Organisations (SIO) est un diplôme reconnu par l’état de niveau Bac+2.
+                                Il comporte deux option permettant de se spécialiser, les deux comportants des notions de cybersécurité: 
+                                <br>
+                                - Solutions Logicielles et Applications Métier (SLAM) 
+                                <br>
+                                -Solutions d’Infrastructure, Systèmes et Réseaux (SISR).
+                            </p>
+                            <h3>
+                                Enseignement général du BTS SIO
+                            </h3>
+                            <!-- <hr> -->
+                            <p>
+                            Le BTS comporte un tronc commun pour les deux options avec la Culture Général et Expression (CGE), 
                             <br>
-                            - Solutions Logicielles et Applications Métier (SLAM) 
-                            <br>
-                            -Solutions d’Infrastructure, Systèmes et Réseaux (SISR).
-                        </p>
-                        <h3>
-                            Enseignement général du BTS SIO
-                        </h3>
-                        <!-- <hr> -->
+                            la Culture Economique Juridique et Managériale (CEJM), l'anglais et les mathématiques
+                            </p>
+                    </div>
+                </div>
+                <!-- OPTIONS -->
+                <div class=" veilleGlass optionSLAM">
+                    <!-- SLAM -->
+                        <h3 class="d-flex justify-content-center">Option SLAM</h3>
                         <p>
-                           Le BTS comporte un tronc commun pour les deux options avec la Culture Général et Expression (CGE), 
-                           <br>
-                           la Culture Economique Juridique et Managériale (CEJM), l'anglais et les mathématiques
+                            L’option SLAM est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance de programmes applicatifs. 
+                            Grâce à des cours spécifiques, les diplômés seront capables de gérer un parc informatique ou d’administrer un réseau au sein d’une entreprise. 
+                            Ils pourront également gérer l’intégration, la sécurisation et la configuration des serveurs, mais aussi des postes clients et des équipements d’interconnexion.
                         </p>
                 </div>
-            </div>
-            <!-- OPTIONS -->
-            <div class=" veilleGlass optionSLAM">
-                <!-- SLAM -->
-                    <h3 class="d-flex justify-content-center">Option SLAM</h3>
-                    <p>
-                        L’option SLAM est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance de programmes applicatifs. 
-                        Grâce à des cours spécifiques, les diplômés seront capables de gérer un parc informatique ou d’administrer un réseau au sein d’une entreprise. 
-                        Ils pourront également gérer l’intégration, la sécurisation et la configuration des serveurs, mais aussi des postes clients et des équipements d’interconnexion.
-                    </p>
-            </div>
 
-            <!-- SISR -->
-            <div class="veilleGlass optionSISR">
-                <h3 class="d-flex justify-content-center">Option SISR</h3>
-                    <p>
-                        L’option SISR est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance d’infrastructures réseaux. 
-                        Assurer la sécurité, la maintenance et l’installation des réseaux et des équipements informatiques font partie des principales missions des futurs administrateurs, 
-                        techniciens ou pilotes d’exploitation.
-                    </p>
+                <!-- SISR -->
+                <div class="veilleGlass optionSISR">
+                    <h3 class="d-flex justify-content-center">Option SISR</h3>
+                        <p>
+                            L’option SISR est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance d’infrastructures réseaux. 
+                            Assurer la sécurité, la maintenance et l’installation des réseaux et des équipements informatiques font partie des principales missions des futurs administrateurs, 
+                            techniciens ou pilotes d’exploitation.
+                        </p>
 
+                </div>
             </div>
         </div>
-    </div>
         
     </body>
 
