--- a/html/projet.html
+++ b/html/projet.html
@@ -41,7 +41,7 @@
         <!-- PROJET SCOLAIRE -->
         <div class="projet">
             <div class="veilleGlass">
-                <h1>Quels sont les projets vu en cours d'année?</h1>
+                <h1>Quels sont les projets réalisé en cours d'année?</h1>
                 <p>Nous avons travaillé en groupe de 2 sur les AP (Ateliers de Professionnalisation).
                 Les AP permettent de mettre en situation les élèves selon des contextes qu'ils pourraient rencontrer dans le monde professionnel.</p>
             </div>
