--- a/html/documentations.html
+++ b/html/documentations.html
@@ -72,6 +72,15 @@
                     <li>
                         <a href="../pdf/inventaireDoc.pdf" target="_blank" rel="noopener noreferrer">Documentation Inventaire</a>
                     </li>
+                    <li>
+                        <a href="../pdf/Documentation - Veam agent.pdf" target="_blank" rel="noopener noreferrer">Documentation Veam Agent</a>
+                    </li>
+                    <li>
+                        <a href="../pdf/Site Karoil.pdf" target="_blank" rel="noopener noreferrer">Site vitrine</a>
+                    </li>
+                    <li>
+                        <a href="../pdf/Documentation - Planifier les activités.pdf" target="_blank" rel="noopener noreferrer">Planifier les activités</a>
+                    </li>
                 </ul>
             </div>
         </div>
