--- a/html/veille.html
+++ b/html/veille.html
@@ -101,10 +101,20 @@
                     </div>
 
                     <div class="newsVeille">
-                        <h3>Angular CLI</h3>
-                        <a href="https://blog.angular.io/moving-angular-cli-to-jest-and-web-test-runner-ef85ef69ceca" target="_blank" crossorigin="anonymous" rel="noopener noreferrer">
-                            <img src="../asset/ANGULARicon.png" alt="angular" class="iconLogo">
-                        </a>
+                        <h3>Les nouveautés de la V16</h3>
+                        <li>
+                            <p>Une meilleure performance d'exécution en réduisant le nombre de calculs lors de la détection des modifications</p>
+                        </li>
+                        <li>
+                            <p>Permet une réactivité fine , qui dans les versions futures permettra de vérifier les changements uniquement dans les composants concernés</p>
+                        </li>
+                        <li>
+                            <p>Permet une réactivité fine , qui dans les versions futures permettra de vérifier les changements uniquement dans les composants concernés</p>
+                        </li>
+                        <li>
+                            <p>Fournit des propriétés calculées sans la pénalité de recalcul à chaque cycle de détection de changement</p>
+                        </li>
+                        
                     </div>
                 </div>
             </div>
