--- a/html/profil.html
+++ b/html/profil.html
@@ -156,7 +156,7 @@
 
             <!-- affichage CV -->
             <div class="pdfClass">
-                <embed src="../asset/paillet-cv-fev.pdf" type="application/pdf" width="100%" height="100%">
+                <embed src="../asset/paillet-laura-cv.pdf" type="application/pdf" width="100%" height="100%">
             </div>
         </div>
     </body>
