--- a/html/bts.html
+++ b/html/bts.html
@@ -40,7 +40,7 @@
         </nav>
 
         <!-- grid présentation BTS -->
-        <div class="griddys">
+        <div class="griddy">
             <div class="parent">
                 <div class="veilleGlass btsText">
                         <div class="d-flex justify-content-center textChild">
