--- a/html/veille.html
+++ b/html/veille.html
@@ -102,19 +102,9 @@
 
                     <div class="newsVeille">
                         <h3>Les nouveautés de la V16</h3>
-                        <li>
-                            <p>Une meilleure performance d'exécution en réduisant le nombre de calculs lors de la détection des modifications</p>
-                        </li>
-                        <li>
-                            <p>Permet une réactivité fine , qui dans les versions futures permettra de vérifier les changements uniquement dans les composants concernés</p>
-                        </li>
-                        <li>
-                            <p>Permet une réactivité fine , qui dans les versions futures permettra de vérifier les changements uniquement dans les composants concernés</p>
-                        </li>
-                        <li>
-                            <p>Fournit des propriétés calculées sans la pénalité de recalcul à chaque cycle de détection de changement</p>
-                        </li>
-                        
+                        <li> Une meilleure performance d'exécution en réduisant le nombre de calculs lors de la détection des modifications </li>
+                        <li> Permet une réactivité fine , qui dans les versions futures permettra de vérifier les changements uniquement dans les composants concernés </li>
+                        <li> Fournit des propriétés calculées sans la pénalité de recalcul à chaque cycle de détection de changement </li>
                     </div>
                 </div>
             </div>
@@ -122,6 +112,7 @@
             <!-- RGPD -->
             <div class="veilleGlass adjust">
                 <h2>Qu'est-ce que la confidentialité et protection des données?</h2>
+                <br>
                 <h3>La gestion des données en Europe avec le RGPD</h3>
                 <p>Le RGPD ou GDPR « General Data Protection Regulation » en anglais, 
                     a pour principaux objectifs du RGPD sont d'accroître à la fois la protection 
