--- a/html/profil.html
+++ b/html/profil.html
@@ -42,21 +42,19 @@
             <div class="veilleGlass adjust">
                 <h1 class="d-flex justify-content-center">Présentation</h1>
                 <p class="d-flex justify-content-center textPresentation">
-                    Bienvenu sur mon portefolio, je m'appelle Laura Paillet et je suis étudiante à l'école IPSSI à SQY, en deuxième année 
-                    de BTS SIO option Solutions Logicielles et Applications Métier (SLAM). 
+                    Bienvenu sur mon portefolio, je m'appelle Laura Paillet et je suis étudiante à l'école IPSSI Montpellier, en Bachelor développeur full stack
+                    et DevOps.
                     <br>
-                    Je fais ma deuxième année de BTS en alternance dans l'ESN Karoil, spécialisé dans les nouvelles technologies et l'informatique, 
-                    et ai déjà participé à quelques projets au sein de l'entreprise, tel que sur le site vitrine. 
-                    Le rythme de l'alternance étant 2 semaines en entreprise et 2 semaines en école.
+                    Avant ça, j'ai effectué ma deuxième année de BTS SIO en alternance dans l'ESN Karoil, spécialisé dans les nouvelles technologies et l'informatique, 
+                    et ai déjà participé à quelques projets au sein de l'entreprise, tel que sur le site vitrine.
                 </p>
-                <a href="https://www.karoil.fr/" target="_blank"></a>
             </div>
 
             <div class="veilleGlass adjust">
                 <h2 class="d-flex justify-content-center">Mon projet professionnel:</h2>
                 <p class="d-flex justify-content-center textPresentation">
-                    J'aimerais l'année prochaine, continuer mes études sur un Bachelor Développement fullstack & DevOps et 
-                    le faire en alternance afin de continuer à acquérir de l'expérience. 
+                    Suite à l'obtention de mon BTS SIO, je continue mes études sur un Bachelor Développement fullstack & DevOps et 
+                    souhaite le faire en alternance afin de continuer à acquérir de l'expérience. 
                     <br>
                     Par la suite j'aimerais continuer mes études sur un mastère dev, data et IA.
                 </p>
